--- a/index.html
+++ b/index.html
@@ -111,6 +111,14 @@
     </form>
 </section>
 
+<section id="proyectos">
+    <h2>colegas referencias personales y profecionales</h2>
+    <ul>
+        <li><a href="indexj.html" target="_blank">Ver hoja de vida de juan </a></li>
+        <li><a href="indexY.html" target="_blank">Ver hoja de vida yorman</a></li>
+        <!-- Agrega más enlaces si tienes más proyectos -->
+    </ul>
+</section>
 
     <footer>
         <p>© 2024 José Carlos Osorio Galeano. Todos los derechos reservados.</p>
