--- a/indexj.html
+++ b/indexj.html
@@ -17,7 +17,7 @@
     <div class="container mt-4">
         <header class="d-flex align-items-center mb-4">
             <div class="photo me-3">
-                <img src="img/Juan.jpeg" alt="Foto de Juan Esteban" class="img-thumbnail rounded-circle" style="width: 100px; height: 100px;">
+                <img src="img/Juan.jpg" alt="Foto de Juan Esteban" class="img-thumbnail rounded-circle" style="width: 100px; height: 100px;">
             </div>
             <div>
                 <h1 class="display-4">Juan Esteban</h1>
